// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundControl Check Background Color layer 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-m": "",
    "background-palette-color-general": 5,
    "background-palette-color-m": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-m": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-m": 45,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
]
`;

exports[`BackgroundControl Check Background Color layer hover 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-general-hover": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m-hover": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
]
`;

exports[`BackgroundControl Check Background image layer 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "fixed",
    "background-image-attachment-m": "fixed",
    "background-image-clip-general": "content-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-crop-options-general": null,
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-mediaID-general": "",
    "background-image-mediaURL-general": "",
    "background-image-opacity-general": 0.55,
    "background-image-opacity-m": 0.55,
    "background-image-origin-general": "border-box",
    "background-image-origin-m": "border-box",
    "background-image-position-general": "left top",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-m": "left top",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "repeat",
    "background-image-repeat-m": "repeat",
    "background-image-size-general": "contain",
    "background-image-size-m": "contain",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 2,
    "type": "image",
  },
]
`;

exports[`BackgroundControl Check Background image layer hover 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "fixed",
    "background-image-attachment-general-hover": "local",
    "background-image-attachment-m": "fixed",
    "background-image-attachment-m-hover": "local",
    "background-image-clip-general": "content-box",
    "background-image-clip-general-hover": "padding-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-m-hover": "padding-box",
    "background-image-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-crop-options-general": null,
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-mediaID-general": "",
    "background-image-mediaURL-general": "",
    "background-image-opacity-general": 0.55,
    "background-image-opacity-general-hover": 0.82,
    "background-image-opacity-m": 0.55,
    "background-image-opacity-m-hover": 0.82,
    "background-image-origin-general": "border-box",
    "background-image-origin-general-hover": "content-box",
    "background-image-origin-m": "border-box",
    "background-image-origin-m-hover": "content-box",
    "background-image-position-general": "left top",
    "background-image-position-general-hover": "center top",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-m": "left top",
    "background-image-position-m-hover": "center top",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "repeat",
    "background-image-repeat-general-hover": "repeat-x",
    "background-image-repeat-m": "repeat",
    "background-image-repeat-m-hover": "repeat-x",
    "background-image-size-general": "contain",
    "background-image-size-general-hover": "cover",
    "background-image-size-m": "contain",
    "background-image-size-m-hover": "cover",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 2,
    "type": "image",
  },
]
`;

exports[`BackgroundControl Check Background shape layer 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "fixed",
    "background-image-attachment-general-hover": "local",
    "background-image-attachment-m": "fixed",
    "background-image-attachment-m-hover": "local",
    "background-image-clip-general": "content-box",
    "background-image-clip-general-hover": "padding-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-m-hover": "padding-box",
    "background-image-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-crop-options-general": null,
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-mediaID-general": "",
    "background-image-mediaURL-general": "",
    "background-image-opacity-general": 0.55,
    "background-image-opacity-general-hover": 0.82,
    "background-image-opacity-m": 0.55,
    "background-image-opacity-m-hover": 0.82,
    "background-image-origin-general": "border-box",
    "background-image-origin-general-hover": "content-box",
    "background-image-origin-m": "border-box",
    "background-image-origin-m-hover": "content-box",
    "background-image-position-general": "left top",
    "background-image-position-general-hover": "center top",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-m": "left top",
    "background-image-position-m-hover": "center top",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "repeat",
    "background-image-repeat-general-hover": "repeat-x",
    "background-image-repeat-m": "repeat",
    "background-image-repeat-m-hover": "repeat-x",
    "background-image-size-general": "contain",
    "background-image-size-general-hover": "cover",
    "background-image-size-m": "contain",
    "background-image-size-m-hover": "cover",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 2,
    "type": "image",
  },
  Object {
    "background-video-clipPath-general": "",
    "background-video-endTime": "",
    "background-video-fallbackID-general": null,
    "background-video-fallbackURL-general": "",
    "background-video-loop": true,
    "background-video-mediaID": null,
    "background-video-mediaURL": "https://www.youtube.com/watch?v=C0DPdy98e4c&ab_channel=SimonYapp",
    "background-video-opacity-general": 0.44,
    "background-video-opacity-m": 0.44,
    "background-video-startTime": 999,
    "background-video-startTime-hover": 999,
    "display-general": "block",
    "display-general-hover": "none",
    "id": 3,
    "type": "video",
  },
  Object {
    "SVGData": Object {
      "group-maxi-12__1145": Object {
        "color": "",
        "imageID": "",
        "imageURL": "",
      },
    },
    "SVGElement": "<html xmlns=\\"http://www.w3.org/1999/xhtml\\" data-item=\\"group-maxi-12__svg\\"><body><parsererror style=\\"display: block; white-space: pre; border: 2px solid #c77; padding: 0 1em 0 1em; margin: 1em; background-color: #fdd; color: black\\"><h3>This page contains the following errors:</h3><div style=\\"font-family:monospace;font-size:12px\\">error on line 1 at column 1: Document is empty
</div><h3>Below is a rendering of the page up to the first error.</h3></parsererror></body></html>",
    "background-palette-svg-color-general": 5,
    "background-palette-svg-color-m": 5,
    "background-palette-svg-color-status-general": true,
    "background-palette-svg-color-status-m": true,
    "background-palette-svg-opacity-general": 77,
    "background-palette-svg-opacity-m": 77,
    "background-svg-SVGData": Object {
      "group-maxi-12__1145": Object {
        "color": "",
        "imageID": "",
        "imageURL": "",
      },
    },
    "background-svg-SVGElement": "<svg viewBox=\\"1.2999999523162842, 9.59999942779541, 33.5, 17\\" class=\\"shape-26-maxi-svg\\" data-item=\\"group-maxi-12__svg\\"><path fill=\\"\\" data-fill=\\"\\" d=\\"M24.1 15.9c7.5-2 10.7-6.3 10.7-6.3v17H1.3V14.7c9.5 2.8 17.8 2.5 22.8 1.2z\\"></path></svg>",
    "background-svg-SVGMediaID": null,
    "background-svg-SVGMediaURL": null,
    "background-svg-left-general": 36,
    "background-svg-left-m": 36,
    "background-svg-left-unit-general": "%",
    "background-svg-size-general": 184,
    "background-svg-size-m": 184,
    "background-svg-size-unit-general": "%",
    "background-svg-top-general": 53,
    "background-svg-top-m": 53,
    "background-svg-top-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 4,
    "type": "shape",
  },
]
`;

exports[`BackgroundControl Check Background shape layer hover 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "fixed",
    "background-image-attachment-general-hover": "local",
    "background-image-attachment-m": "fixed",
    "background-image-attachment-m-hover": "local",
    "background-image-clip-general": "content-box",
    "background-image-clip-general-hover": "padding-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-m-hover": "padding-box",
    "background-image-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-crop-options-general": null,
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-mediaID-general": "",
    "background-image-mediaURL-general": "",
    "background-image-opacity-general": 0.55,
    "background-image-opacity-general-hover": 0.82,
    "background-image-opacity-m": 0.55,
    "background-image-opacity-m-hover": 0.82,
    "background-image-origin-general": "border-box",
    "background-image-origin-general-hover": "content-box",
    "background-image-origin-m": "border-box",
    "background-image-origin-m-hover": "content-box",
    "background-image-position-general": "left top",
    "background-image-position-general-hover": "center top",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-m": "left top",
    "background-image-position-m-hover": "center top",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "repeat",
    "background-image-repeat-general-hover": "repeat-x",
    "background-image-repeat-m": "repeat",
    "background-image-repeat-m-hover": "repeat-x",
    "background-image-size-general": "contain",
    "background-image-size-general-hover": "cover",
    "background-image-size-m": "contain",
    "background-image-size-m-hover": "cover",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 2,
    "type": "image",
  },
  Object {
    "background-video-clipPath-general": "",
    "background-video-endTime": "",
    "background-video-fallbackID-general": null,
    "background-video-fallbackURL-general": "",
    "background-video-loop": true,
    "background-video-mediaID": null,
    "background-video-mediaURL": "https://www.youtube.com/watch?v=C0DPdy98e4c&ab_channel=SimonYapp",
    "background-video-opacity-general": 0.44,
    "background-video-opacity-m": 0.44,
    "background-video-startTime": 999,
    "background-video-startTime-hover": 999,
    "display-general": "block",
    "display-general-hover": "none",
    "id": 3,
    "type": "video",
  },
  Object {
    "SVGData": Object {
      "group-maxi-12__1145": Object {
        "color": "",
        "imageID": "",
        "imageURL": "",
      },
    },
    "SVGElement": "<html xmlns=\\"http://www.w3.org/1999/xhtml\\" data-item=\\"group-maxi-12__svg\\"><body><parsererror style=\\"display: block; white-space: pre; border: 2px solid #c77; padding: 0 1em 0 1em; margin: 1em; background-color: #fdd; color: black\\"><h3>This page contains the following errors:</h3><div style=\\"font-family:monospace;font-size:12px\\">error on line 1 at column 1: Document is empty
</div><h3>Below is a rendering of the page up to the first error.</h3></parsererror></body></html>",
    "background-palette-svg-color-general": 5,
    "background-palette-svg-color-general-hover": 5,
    "background-palette-svg-color-m": 5,
    "background-palette-svg-color-m-hover": 5,
    "background-palette-svg-color-status-general": true,
    "background-palette-svg-color-status-general-hover": true,
    "background-palette-svg-color-status-m": true,
    "background-palette-svg-color-status-m-hover": true,
    "background-palette-svg-opacity-general": 77,
    "background-palette-svg-opacity-general-hover": 0,
    "background-palette-svg-opacity-m": 77,
    "background-palette-svg-opacity-m-hover": 0,
    "background-svg-SVGData": Object {
      "group-maxi-12__1145": Object {
        "color": "",
        "imageID": "",
        "imageURL": "",
      },
    },
    "background-svg-SVGElement": "<svg viewBox=\\"1.2999999523162842, 9.59999942779541, 33.5, 17\\" class=\\"shape-26-maxi-svg\\" data-item=\\"group-maxi-12__svg\\"><path fill=\\"\\" data-fill=\\"\\" d=\\"M24.1 15.9c7.5-2 10.7-6.3 10.7-6.3v17H1.3V14.7c9.5 2.8 17.8 2.5 22.8 1.2z\\"></path></svg>",
    "background-svg-SVGMediaID": null,
    "background-svg-SVGMediaURL": null,
    "background-svg-left-general": 36,
    "background-svg-left-m": 36,
    "background-svg-left-unit-general": "%",
    "background-svg-size-general": 184,
    "background-svg-size-general-hover": 999,
    "background-svg-size-m": 184,
    "background-svg-size-m-hover": 999,
    "background-svg-size-unit-general": "%",
    "background-svg-top-general": 53,
    "background-svg-top-m": 53,
    "background-svg-top-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 4,
    "type": "shape",
  },
]
`;

exports[`BackgroundControl Check Background video layer 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "fixed",
    "background-image-attachment-general-hover": "local",
    "background-image-attachment-m": "fixed",
    "background-image-attachment-m-hover": "local",
    "background-image-clip-general": "content-box",
    "background-image-clip-general-hover": "padding-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-m-hover": "padding-box",
    "background-image-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-crop-options-general": null,
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-mediaID-general": "",
    "background-image-mediaURL-general": "",
    "background-image-opacity-general": 0.55,
    "background-image-opacity-general-hover": 0.82,
    "background-image-opacity-m": 0.55,
    "background-image-opacity-m-hover": 0.82,
    "background-image-origin-general": "border-box",
    "background-image-origin-general-hover": "content-box",
    "background-image-origin-m": "border-box",
    "background-image-origin-m-hover": "content-box",
    "background-image-position-general": "left top",
    "background-image-position-general-hover": "center top",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-m": "left top",
    "background-image-position-m-hover": "center top",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "repeat",
    "background-image-repeat-general-hover": "repeat-x",
    "background-image-repeat-m": "repeat",
    "background-image-repeat-m-hover": "repeat-x",
    "background-image-size-general": "contain",
    "background-image-size-general-hover": "cover",
    "background-image-size-m": "contain",
    "background-image-size-m-hover": "cover",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 2,
    "type": "image",
  },
  Object {
    "background-video-clipPath-general": "",
    "background-video-endTime": "",
    "background-video-fallbackID-general": null,
    "background-video-fallbackURL-general": "",
    "background-video-loop": true,
    "background-video-mediaID": null,
    "background-video-mediaURL": "https://www.youtube.com/watch?v=C0DPdy98e4c&ab_channel=SimonYapp",
    "background-video-opacity-general": 0.44,
    "background-video-opacity-m": 0.44,
    "background-video-startTime": 999,
    "display-general": "block",
    "display-general-hover": "none",
    "id": 3,
    "type": "video",
  },
]
`;

exports[`BackgroundControl Check Background video layer hover 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "fixed",
    "background-image-attachment-general-hover": "local",
    "background-image-attachment-m": "fixed",
    "background-image-attachment-m-hover": "local",
    "background-image-clip-general": "content-box",
    "background-image-clip-general-hover": "padding-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-m-hover": "padding-box",
    "background-image-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-crop-options-general": null,
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-mediaID-general": "",
    "background-image-mediaURL-general": "",
    "background-image-opacity-general": 0.55,
    "background-image-opacity-general-hover": 0.82,
    "background-image-opacity-m": 0.55,
    "background-image-opacity-m-hover": 0.82,
    "background-image-origin-general": "border-box",
    "background-image-origin-general-hover": "content-box",
    "background-image-origin-m": "border-box",
    "background-image-origin-m-hover": "content-box",
    "background-image-position-general": "left top",
    "background-image-position-general-hover": "center top",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-m": "left top",
    "background-image-position-m-hover": "center top",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "repeat",
    "background-image-repeat-general-hover": "repeat-x",
    "background-image-repeat-m": "repeat",
    "background-image-repeat-m-hover": "repeat-x",
    "background-image-size-general": "contain",
    "background-image-size-general-hover": "cover",
    "background-image-size-m": "contain",
    "background-image-size-m-hover": "cover",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 2,
    "type": "image",
  },
  Object {
    "background-video-clipPath-general": "",
    "background-video-endTime": "",
    "background-video-fallbackID-general": null,
    "background-video-fallbackURL-general": "",
    "background-video-loop": true,
    "background-video-mediaID": null,
    "background-video-mediaURL": "https://www.youtube.com/watch?v=C0DPdy98e4c&ab_channel=SimonYapp",
    "background-video-opacity-general": 0.44,
    "background-video-opacity-general-hover": 1,
    "background-video-opacity-m": 0.44,
    "background-video-opacity-m-hover": 1,
    "background-video-startTime": 999,
    "background-video-startTime-hover": 999,
    "display-general": "block",
    "display-general-hover": "none",
    "id": 3,
    "type": "video",
  },
]
`;
